--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">CHETAN GAURKHEDE</div>
                 <div class="text-3">And I'm a Web page desiner<span class="typing"></span></div>
-                <a href="https://www.drworkout.fitness/andrei-deiu-workout-routine/#:~:text=Andrei%20Deiu%20trains%20his%20shoulders%20and%20legs%20twice,the%20gym%20almost%20all%20seven%20days%20a%20week.">FitNess Profile</a>
+                <a
+                    href="https://www.drworkout.fitness/andrei-deiu-workout-routine/#:~:text=Andrei%20Deiu%20trains%20his%20shoulders%20and%20legs%20twice,the%20gym%20almost%20all%20seven%20days%20a%20week.">FitNess
+                    Profile</a>
             </div>
         </div>
     </section>
@@ -224,24 +226,27 @@
         </div>
     </section>
     <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/62d8e59d54f06e12d88a8f3d/1g8fk1su0';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        (function () {
+            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/62d8e59d54f06e12d88a8f3d/1g8fk1su0';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
+    </script>
+    <!--End of Tawk.to Script-->
 
     <!-- footer section start -->
     <footer>
         <span>Created By <a href="www.google.com">Chetan</a> | <span class="far fa-copyright"></span> 2020 All rights
             reserved.</span>
     </footer>
+    <a href="https://www.freecounterstat.com" title="hits counter"><img
+            src="https://counter9.stat.ovh/private/freecounterstat.php?c=gw3a3c7t8smyrmq2x647192ezzatcusl" border="0"
+            title="hits counter" alt="hits counter"></a>
 
     <script src="script.js"></script>
 </body>
