--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="text-2">CHETAN GAURKHEDE</div>
                 <div class="text-3">And I'm a Web page desiner<span class="typing"></span></div>
                 <a
-                    href="https://www.drworkout.fitness/andrei-deiu-workout-routine/#:~:text=Andrei%20Deiu%20trains%20his%20shoulders%20and%20legs%20twice,the%20gym%20almost%20all%20seven%20days%20a%20week.">FitNess
+                    href="https://chetangaurkhede.github.io/fitness/">FitNess
                     Profile</a>
             </div>
         </div>
