--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         HVPM COET amravati for computer science course. and interning at code MBS shivaji commercial,
                         Amravati. I like bodybuilding and playing Kabbadi and cricket. also i like to learn more
                         programing language. I can code in HTML, CSS, JS, PYTHON, CPP and more.</p>
-                    <a href="https://www.docdroid.net/i0xz3I7/fake-cv-pdf">Download CV</a>
+                    <a href="https://app.enhancv.com/share/706740f5/?utm_medium=growth&utm_campaign=share-resume&utm_source=dynamic">Download CV</a>
                 </div>
             </div>
         </div>
